--- a/index.html
+++ b/index.html
@@ -80,4 +80,5 @@ We're going to need an array for each pokemon containing the following:
 - Pokemon Shiny Image (using modern image)
 - What game the pokemon appears in
 - What Methods are available in each game
-- Modifers (shiny charm, lure, cute charm glitch etc)-->
+- Modifers (shiny charm, lure, cute charm glitch etc)
+- Testing cloning repo-->
